crates/wdl-grammar/tests/parsing/missing-version/source.errors
error: WDL 1.0+ documents must begin with a version statement
  ┌─ tests/parsing/missing-version/source.wdl:3:1
  │
3 │ task foo {
  │ ^ a version statement must come before this
  │
  = help: WDL draft-2 documents, which omit the version statement, are not supported
  = fix: if this document is draft-2, upgrade it to at least version 1.0 if possible

